Alignes fixed, it also has a better responsive layout

--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ p, span {
     background-color: hsl(229, 57%, 11%);
 }
 
-@media screen and (min-width: 1440px) {
+@media screen and (min-width: 992px) {
     body:after {
         position: absolute;
         bottom: 0;
@@ -72,7 +72,6 @@ p, span {
     }
     
     .message {
-        padding-top: 5%;
         margin-top: -95px;
         background-color: #ffffff;
         border-radius: 10px 10px 0px 10px;
@@ -91,9 +90,11 @@ p, span {
         color: hsl(229, 57%, 11%);
     }
     
-    #triangolino {
-        float: right;
-        margin-top: 75px;
+    .message:after {
+        content: '';
+        position: absolute;
+        top: 45px;
+        right: 40px;
         width: 0;
         height: 0;
         border-style: solid;
@@ -102,7 +103,7 @@ p, span {
     }
 }
 
-@media (min-width: 375px) and (max-width: 1439px) {
+@media (max-width: 991px) {
     #data-storage-component {
         background: url("../img/bg-mobile.svg") no-repeat center center/cover;
     }
@@ -135,10 +136,11 @@ p, span {
     
     .progress {
         background-color: hsl(229, 57%, 11%);
-        padding: 2px;
+        padding: 3px 2px;
         border-radius: 7px;
         margin-top: 15px;
         margin-bottom: 10px;
+        height: 20px;
     }
     
     .progress-bar {
@@ -147,7 +149,6 @@ p, span {
     }
     
     .message {
-        padding-top: 4%;
         position: absolute;
         left: calc(50% - 90px);
         top: 9rem;
